<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_dashboard"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/menu_dashboard" />

    <item
        android:id="@+id/nav_meals"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/menu_meals" />

    <item
        android:id="@+id/nav_expenses"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/menu_expenses" />

    <item
        android:id="@+id/nav_reports"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/menu_reports" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/menu_settings" />

</menu>
